--- a/semente.html
+++ b/semente.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <style>
+    <style></style>
     <button> <a href="index.html"> voltar </a> </button>
     <ul>
         <i><li> Passo 1: Preparar o Solo</li></i>
@@ -43,7 +43,7 @@
     </ul><hr>
     <p>Certifique-se de que a semente esteja fresca e de boa qualidade.
         Plante a semente em uma época do ano adequada para o clima local.
-        Mantenha a área plantada limpa e organizada para evitar a propagação de doenças e pragas.</p></style>
+        Mantenha a área plantada limpa e organizada para evitar a propagação de doenças e pragas.</p>
 </body>
 
 </html>
