--- a/semente.html
+++ b/semente.html
@@ -9,7 +9,7 @@
 
 <body>
     
-    <button> <a href="index.html"> voltar </a> </button>
+    <button> <a style="index.html"> voltar </a> </button>
     <ul>
         <i><li> Passo 1: Preparar o Solo</li></i>
     </ul><hr>
