--- a/semente.html
+++ b/semente.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-    
-    <button> <a style="index.html"> voltar </a> </button>
+    <button> <a href="index.html"> voltar </a> </button>
     <ul>
         <i><li> Passo 1: Preparar o Solo</li></i>
     </ul><hr>
