--- a/sementesdeagua.html
+++ b/sementesdeagua.html
@@ -16,60 +16,59 @@
             educação rural e a sustentabilidade. Em 2024, o programa lançou a campanha “Agro pela Água: Família Agrinho
             de mãos dadas com o Meio Ambiente”, com foco na preservação e uso racional da água.</p>
     </li>
+
     <ul>
-
-
-        <li>
+    <li>
             <p>A campanha visa levar às novas gerações de cidadãos paranaenses uma importante mensagem de preservação e
                 uso racional da água, para que não volte a perder no futuro. Os personagens do Agrinho, Nando e Aninha,
                 são os porta-vozes da campanha.</p>
-        </li>
+    </li>
     </ul>
 
     <ul>
-        <li>
+    <li>
             <p>A água é fundamental para a produção de alimentos e para o abastecimento das cidades. No entanto, a
                 estimativa que atingiu o Sul do Brasil em 2024 mostrou a importância de trabalhar a percepção de que a
                 água é um elemento vital para a manutenção da vida e dos negócios do campo.</p>
-        </li>
+    </li>
     </ul>
 
     <ul>
-        <li>
+    <li>
             <p>O Programa Agrinho, em parceria com a secretaria estadual do Desenvolvimento Sustentável e do Turismo
                 (Sedest) e a secretaria estadual da Educação (Seed), criou uma campanha para levar às escolas e
                 comunidades rurais a mensagem de preservação da água.</p>
-        </li>
+    </li>
     </ul>
 
 
     <ul>
-        <li>
+    <li>
             <p>Sementes de Água é um termo enganoso. Não existem "sementes de água". Sementes (sementes) são as
                 estruturas reprodutivas das plantas e não têm nada a ver com água.</p>
-            <ul>
+    <li>         
+    <ul>
 
-                <ul>
-                    <li>
-                        <p>No entanto, acho que você pode estar confundindo esse termo com outra coisa. Se você quisesse
-                            perguntar "O que são sementes?", ficarei feliz em ajudar.</p>
-                    </li>
-                    <ul>
+    <ul>
+    <li>
+              <p>No entanto, acho que você pode estar confundindo esse termo com outra coisa. Se você quisesse
+               perguntar "O que são sementes?", ficarei feliz em ajudar.</p>
+    </li>
+    <ul>
 
-                    </ul>
-                    <p>As sementes são resultado do processo de fecundação entre os gametas masculino e feminino de uma
+     </ul>
+     <li>      <p>As sementes são resultado do processo de fecundação entre os gametas masculino e feminino de uma
                         planta e carregam todo o material genético (o genoma) que dará origem a um novo indivíduo.
                         Servem de proteção ao embrião de uma planta e fornecem os nutrientes necessários ao seu
-                        desenvolvimento inicial durante a germinação.</p>
-                    <ul>
+    </li>       esenvolvimento inicial durante a germinação.</p>
 
-
-                        <li>
-                            <p>As sementes também são responsáveis ​​por garantir a proteção do material genético e a
-                                perpetuação das espécies, o que está ligado à sua capacidade de dispersão e propagação
-                                em novos ambientes.</p>
-                        </li>
-                    </ul>
+    <ul>
+    <li>
+                <p>As sementes também são responsáveis ​​por garantir a proteção do material genético e a
+                 perpetuação das espécies, o que está ligado à sua capacidade de dispersão e propagação
+                  em novos ambientes.</p>
+     </li>
+    </ul>
 </body>
 
 </html>
