--- a/index.html
+++ b/index.html
@@ -5,82 +5,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Financiamento para Projetos Rurais</title>
+  <title>Produção da Uva Rosário do Ivaí</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header -->
   <header>
     <nav>
       <ul>
         <li><a href="#introducao">Introdução</a></li>
-        <li><a href="#tipos-de-financiamento">Tipos de Financiamento</a></li>
+        <li><a href="#historia">História</a></li>
+        <li><a href="#caracteristicas">Características</a></li>
+        <li><a href="#producao">Produção</a></li>
         <li><a href="#beneficios">Benefícios</a></li>
-        <li><a href="#como-funciona">Como Funciona</a></li>
-        <li><a href="#casos-de-sucesso">Casos de Sucesso</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
-
-  <!-- Introdução Section -->
-  <section id="introducao">
-    <h1>Financiamento para Projetos Rurais</h1>
-    <p>O financiamento para projetos rurais é uma oportunidade para os produtores rurais desenvolverem seus negócios e melhorarem sua qualidade de vida.</p>
-    <img src="financiamento-rural.jpg" alt="Financiamento para Projetos Rurais">
-  </section>
-
-  <!-- Tipos de Financiamento Section -->
-  <section id="tipos-de-financiamento">
-    <h2>Tipos de Financiamento</h2>
-    <ul>
-      <li>
-        <h3>Crédito Rural</h3>
-        <p>O crédito rural é um tipo de financiamento destinado aos produtores rurais para investir em sua propriedade ou empreendimento.</p>
-      </li>
-      <li>
-        <h3>Financiamento para Irrigação</h3>
-        <p>O financiamento para irrigação é um tipo de financiamento destinado aos produtores rurais para investir em sistemas de irrigação.</p>
-      </li>
-      <li>
-        <h3>Financiamento para Mecanização</h3>
-        <p>O financiamento para mecanização é um tipo de financiamento destinado aos produtores rurais para investir em equipamentos e máquinas agrícolas.</p>
-      </li>
-      <li>
-        <h3>Financiamento para Certificação</h3>
-        <p>O financiamento para certificação é um tipo de financiamento destinado aos produtores rurais para investir em certificações de qualidade e segurança.</p>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Beneficios Section -->
-  <section id="beneficios">
-    <h2>Benefícios</h2>
-    <ul>
-      <li>
-        <h3>Aumento da Produtividade</h3>
-        <p>O financiamento para projetos rurais pode ajudar a aumentar a produtividade e a eficiência dos produtores rurais.</p>
-      </li>
-      <li>
-        <h3>Melhoria da Qualidade de Vida</h3>
-        <p>O financiamento para projetos rurais pode ajudar a melhorar a qualidade de vida dos produtores rurais e suas famílias.</p>
-      </li>
-      <li>
-        <h3>Desenvolvimento Sustentável</h3>
-        <p>O financiamento para projetos rurais pode ajudar a promover o desenvolvimento sustentável e a preservação do meio ambiente.</p>
-      </li>
-    </ul>
-  </section>
-
-  <!-- Como Funciona Section -->
-  <section id="como-funciona">
-    <h2>Como Funciona</h2>
-    <p>O financiamento para projetos rurais funciona através de uma parceria entre os produtores rurais, as instituições financeiras e os governos.</p>
-    <img src="como-funciona.jpg" alt="Como Funciona">
-  </section>
-
-  <!-- Casos de Sucesso Section -->
-  <section id="casos-de-sucesso">
-    <h2>Casos de Sucesso</h2>
-    <ul>
-      <li>
+  <main>
+    <section id="introducao">
+      <h1>Produção da Uva Rosário do Ivaí</h1>
+      <p>A uva Rosário do Ivaí é uma variedade de uva brasileira, originária do município de Rosário do Ivaí, no Paraná. É conhecida por sua qualidade e sabor único, tornando-se uma das principais opções para a produção de vinhos e sucos de alta qualidade.</p>
+      <img src="uva-rosario-do-ivai.jpg" alt="Uva Rosário do Ivaí">
+    </section>
+    <section id="historia">
+      <h2>História da Uva Rosário do Ivaí</h2>
+      <p>A uva Rosário do Ivaí foi desenvolvida na década de 1970, por meio de um programa de melhoramento genético realizado pela Embrapa Uva e Vinho. Desde então, ela se tornou uma das principais variedades de uva do Brasil, sendo cultivada em diversas regiões do país.</p>
+    </section>
+    <section id="caracteristicas">
+      <h2>Características da Uva Rosário do Ivaí</h2>
+      <ul>
+        <li>Cor: Vermelha-escura</li>
+        <li>Sabor: Doce e aveludado</li>
+        <li>Aroma: Frutas vermelhas e especiarias</li>
+        <li>Acidez: Média</li>
+        <li>Tanino: Alto</li>
+      </ul>
+    </section>
+    <section id="producao">
+      <h2>Produção da Uva Rosário do Ivaí</h2>
+      <p>A produção da uva Rosário do Ivaí é realizada em diversas regiões do Brasil, principalmente no Paraná, Santa Catarina e Rio Grande do Sul. A colheita é feita manualmente, entre janeiro e março, dependendo da região e do clima.</p>
+      <img src="producao-uva-rosario-do-ivai.jpg" alt="Produção da Uva Rosário do Ivaí">
+    </section>
+    <section id="beneficios">
+      <h2>Benefícios da Uva Rosário do Ivaí</h2>
+      <ul>
+        <li>Rica em antioxidantes</li>
+        <li>Fonte de fibras e minerais</li>
+        <li>Ajuda a reduzir o colesterol</li>
+        <li>Pode ajudar a prevenir doenças cardíacas</li>
+      </ul>
+    </section>
+    <section id="contato">
+      <h2>Contato</h2>
+      <p>Para mais informações sobre a produção da uva Rosário do Ivaí ou para adquirir nossos produtos, entre em contato conosco:</p>
+      <ul>
+        <li>Telefone: (43) 99999-9999</li>
+        <li>Email: [contato@uvarosario.com.br](mailto:contato@uvarosario.com.br)</li>
+        <li>Endereço: Rua dos Vinhedos, 123 - Rosário do Ivaí, PR</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2023 Produção da Uva Rosário do Ivaí</p>
+  </footer>
+  <script src="script.js"></
