--- a/index.html
+++ b/index.html
@@ -1,71 +1,53 @@
-<!-- financiamento.html -->
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Produção da Uva Rosário do Ivaí</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Feijão para o Agrinho</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#introducao">Introdução</a></li>
-        <li><a href="#historia">História</a></li>
-        <li><a href="#caracteristicas">Características</a></li>
-        <li><a href="#producao">Produção</a></li>
-        <li><a href="#beneficios">Benefícios</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="introducao">
-      <h1>Produção da Uva Rosário do Ivaí</h1>
-      <p>A uva Rosário do Ivaí é uma variedade de uva brasileira, originária do município de Rosário do Ivaí, no Paraná. É conhecida por sua qualidade e sabor único, tornando-se uma das principais opções para a produção de vinhos e sucos de alta qualidade.</p>
-      <img src="uva-rosario-do-ivai.jpg" alt="Uva Rosário do Ivaí">
-    </section>
-    <section id="historia">
-      <h2>História da Uva Rosário do Ivaí</h2>
-      <p>A uva Rosário do Ivaí foi desenvolvida na década de 1970, por meio de um programa de melhoramento genético realizado pela Embrapa Uva e Vinho. Desde então, ela se tornou uma das principais variedades de uva do Brasil, sendo cultivada em diversas regiões do país.</p>
-    </section>
-    <section id="caracteristicas">
-      <h2>Características da Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Cor: Vermelha-escura</li>
-        <li>Sabor: Doce e aveludado</li>
-        <li>Aroma: Frutas vermelhas e especiarias</li>
-        <li>Acidez: Média</li>
-        <li>Tanino: Alto</li>
-      </ul>
-    </section>
-    <section id="producao">
-      <h2>Produção da Uva Rosário do Ivaí</h2>
-      <p>A produção da uva Rosário do Ivaí é realizada em diversas regiões do Brasil, principalmente no Paraná, Santa Catarina e Rio Grande do Sul. A colheita é feita manualmente, entre janeiro e março, dependendo da região e do clima.</p>
-      <img src="producao-uva-rosario-do-ivai.jpg" alt="Produção da Uva Rosário do Ivaí">
-    </section>
-    <section id="beneficios">
-      <h2>Benefícios da Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Rica em antioxidantes</li>
-        <li>Fonte de fibras e minerais</li>
-        <li>Ajuda a reduzir o colesterol</li>
-        <li>Pode ajudar a prevenir doenças cardíacas</li>
-      </ul>
-    </section>
-    <section id="contato">
-      <h2>Contato</h2>
-      <p>Para mais informações sobre a produção da uva Rosário do Ivaí ou para adquirir nossos produtos, entre em contato conosco:</p>
-      <ul>
-        <li>Telefone: (43) 99999-9999</li>
-        <li>Email: [contato@uvarosario.com.br](mailto:contato@uvarosario.com.br)</li>
-        <li>Endereço: Rua dos Vinhedos, 123 - Rosário do Ivaí, PR</li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2023 Produção da Uva Rosário do Ivaí</p>
-  </footer>
-  <script src="script.js"></
+    <header>
+        <h1>Feijão para o Agrinho</h1>
+        <nav>
+            <ul>
+                <li><a href="#beneficios">Benefícios do Feijão</a></li>
+                <li><a href="#receitas">Receitas com Feijão</a></li>
+                <li><a href="#dicas">Dicas para Cultivar Feijão</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="beneficios">
+            <h2>Benefícios do Feijão</h2>
+            <p>O feijão é uma fonte rica em proteínas, fibras e nutrientes essenciais para o corpo humano.</p>
+            <ul>
+                <li>Reduz o colesterol</li>
+                <li>Ajuda a controlar o peso</li>
+                <li>É rico em antioxidantes</li>
+            </ul>
+        </section>
+        <section id="receitas">
+            <h2>Receitas com Feijão</h2>
+            <p>Aqui estão algumas receitas deliciosas com feijão:</p>
+            <ul>
+                <li>Feijão com Arroz</li>
+                <li>Feijão com Carne</li>
+                <li>Feijão com Vegetais</li>
+            </ul>
+        </section>
+        <section id="dicas">
+            <h2>Dicas para Cultivar Feijão</h2>
+            <p>Aqui estão algumas dicas para cultivar feijão:</p>
+            <ul>
+                <li>Escolha um local com sol pleno</li>
+                <li>Use um solo fértil</li>
+                <li>Regue regularmente</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Feijão para o Agrinho</p>
+    </footer>
+</body>
+</html>
