--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feijão para o Agrinho</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="scrip.js">
 </head>
 
 <body>
@@ -52,5 +53,5 @@
     <p>&copy; 2023 Feijão para o Agrinho</p>
   </footer>
 </body>
-<script src="script.js"></script>
+
 </html>
