--- a/index.html
+++ b/index.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feijão para o Agrinho</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="scrip.js">
+  <title>Produção de Uva Rosário do Ivaí</title>
+  <link rel="stylesheet" href="estilo.css">
 </head>
-
 <body>
   <header>
-    <h1>Feijão para o Agrinho</h1>
+    <h1>Produção de Uva Rosário do Ivaí</h1>
     <nav>
       <ul>
-        <li><a href="#beneficios">Benefícios do Feijão</a></li>
-        <li><a href="#receitas">Receitas com Feijão</a></li>
-        <li><a href="#dicas">Dicas para Cultivar Feijão</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#beneficios">Benefícios</a></li>
+        <li><a href="#receitas">Receitas</a></li>
+        <li><a href="#dicas">Dicas</a></li>
       </ul>
     </nav>
   </header>
   <main>
+    <section id="sobre">
+      <h2>Sobre a Uva Rosário do Ivaí</h2>
+      <p>A uva Rosário do Ivaí é uma variedade de uva originária do Brasil, conhecida por sua cor rosa e seu sabor doce e suave.</p>
+      <img src="imagens/uva-rosario.jpg" alt="Uva Rosário do Ivaí" width="300" height="200">
+    </section>
     <section id="beneficios">
-      <h2>Benefícios do Feijão</h2>
-      <p>O feijão é uma fonte rica em proteínas, fibras e nutrientes essenciais para o corpo humano.</p>
+      <h2>Benefícios da Uva Rosário do Ivaí</h2>
       <ul>
-        <li>Reduz o colesterol</li>
-        <li>Ajuda a controlar o peso</li>
-        <li>É rico em antioxidantes</li>
+        <li>Rica em antioxidantes e vitaminas</li>
+        <li>Ajuda a reduzir o estresse e a ansiedade</li>
+        <li>Fortalece o sistema imunológico</li>
       </ul>
+      <img src="imagens/beneficios.jpg" alt="Benefícios da Uva Rosário do Ivaí" width="300" height="200">
     </section>
     <section id="receitas">
-      <h2>Receitas com Feijão</h2>
-      <p>Aqui estão algumas receitas deliciosas com feijão:</p>
+      <h2>Receitas com Uva Rosário do Ivaí</h2>
       <ul>
-        <li>Feijão com Arroz</li>
-        <li>Feijão com Carne</li>
-        <li>Feijão com Vegetais</li>
+        <li>Suco de uva Rosário do Ivaí com limão</li>
+        <li>Salada de uva Rosário do Ivaí com queijo e nozes</li>
+        <li>Torta de uva Rosário do Ivaí com creme</li>
       </ul>
+      <img src="imagens/receitas.jpg" alt="Receitas com Uva Rosário do Ivaí" width="300" height="200">
     </section>
     <section id="dicas">
-      <h2>Dicas para Cultivar Feijão</h2>
-      <p>Aqui estão algumas dicas para cultivar feijão:</p>
+      <h2>Dicas para Consumir Uva Rosário do Ivaí</h2>
       <ul>
-        <li>Escolha um local com sol pleno</li>
-        <li>Use um solo fértil</li>
-        <li>Regue regularmente</li>
+        <li>Consuma fresca ou congelada para preservar os nutrientes</li>
+        <li>Use em smoothies e sucos para adicionar sabor e nutrientes</li>
+        <li>Adicione à sua dieta regularmente para aproveitar os benefícios</li>
       </ul>
+      <img src="imagens/dicas.jpg" alt="Dicas para Consumir Uva Rosário do Ivaí" width="300" height="200">
     </section>
   </main>
   <footer>
-    <p>&copy; 2023 Feijão para o Agrinho</p>
+    <p>&copy; 2023 Produção de Uva Rosário do Ivaí</p>
   </footer>
+  <script src="script.js"></script>
 </body>
-
 </html>
