--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Produção de Uva Rosário do Ivaí</title>
-  <link rel="stylesheet" href="stye.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="scrip.js">
 </head>
 <body>
   <header>
