--- a/index.html
+++ b/index.html
@@ -1,58 +1,48 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Produção de Uva Rosário do Ivaí</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="scrip.js">
+  <title>Uva de Rosário do Ivai</title>
+  <link rel="stylesheet" href="estilo.css">
 </head>
-
 <body>
   <header>
-    <h1>Produção de Uva Rosário do Ivaí</h1>
-
+    <h1>Uva de Rosário do Ivai</h1>
   </header>
+  <nav>
+    <h2>Quem Somos</h2>
+    <h2>Nossa História</h2>
+    <h2>Produtos</h2>
+    <h2>Contato</h2>
+  </nav>
   <main>
-    <section id="sobre">
-      <h2>Sobre a Uva Rosário do Ivaí</h2>
-      <p>A uva Rosário do Ivaí é uma variedade de uva originária do Brasil, conhecida por sua cor rosa e seu sabor doce
-        e suave.</p>
-      <img src="imagens/uva-rosario.jpg" alt="Uva Rosário do Ivaí" width="300" height="200">
+    <section id="quem-somos">
+      <h2>Quem Somos</h2>
+      <p>A Uva de Rosário do Ivai é uma empresa familiar que produz uvas de alta qualidade.</p>
+      <img src="imagem-quem-somos.jpg" alt="Imagem Quem Somos">
     </section>
-    <section id="beneficios">
-      <h2>Benefícios da Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Rica em antioxidantes e vitaminas</li>
-        <li>Ajuda a reduzir o estresse e a ansiedade</li>
-        <li>Fortalece o sistema imunológico</li>
-      </ul>
-      <img src="imagens/beneficios.jpg" alt="Benefícios da Uva Rosário do Ivaí" width="300" height="200">
+    <section id="nossa-historia">
+      <h2>Nossa História</h2>
+      <p>A nossa história começou em 1990, quando...</p>
+      <img src="imagem-nossa-historia.jpg" alt="Imagem Nossa História">
     </section>
-    <section id="receitas">
-      <h2>Receitas com Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Suco de uva Rosário do Ivaí com limão</li>
-        <li>Salada de uva Rosário do Ivaí com queijo e nozes</li>
-        <li>Torta de uva Rosário do Ivaí com creme</li>
-      </ul>
-      <img src="imagens/receitas.jpg" alt="Receitas com Uva Rosário do Ivaí" width="300" height="200">
+    <section id="produtos">
+      <h2>Produtos</h2>
+      <p>Nossos produtos são feitos com amor e carinho.</p>
+      <img src="imagem-produtos.jpg" alt="Imagem Produtos">
     </section>
-    <section id="dicas">
-      <h2>Dicas para Consumir Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Consuma fresca ou congelada para preservar os nutrientes</li>
-        <li>Use em smoothies e sucos para adicionar sabor e nutrientes</li>
-        <li>Adicione à sua dieta regularmente para aproveitar os benefícios</li>
-      </ul>
-      <img src="imagens/dicas.jpg" alt="Dicas para Consumir Uva Rosário do Ivaí" width="300" height="200">
+    <section id="contato">
+      <h2>Contato</h2>
+      <p>Entre em contato conosco para saber mais.</p>
+      <img src="imagem-contato.jpg" alt="Imagem Contato">
     </section>
   </main>
   <footer>
-    <p>&copy; 2023 Produção de Uva Rosário do Ivaí</p>
+    <p>&copy; 2023 Uva de Rosário do Ivai</p>
   </footer>
   <script src="script.js"></script>
 </body>
-
 </html>
