--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uva de Rosário do Ivai</title>
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="scrip.js">
 </head>
 <body>
   <header>
