--- a/index.html
+++ b/index.html
@@ -1,84 +1,60 @@
-<!-- index.html -->
-
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uva de Rosário do Ivaí - Vinhos e Suco de Qualidade</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Produção de Uva Rosário do Ivaí</title>
+  <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-        <h1>Uva de Rosário do Ivaí</h1>
-    </header>
-
-    <!-- Seção Sobre -->
+  <header>
+    <h1>Produção de Uva Rosário do Ivaí</h1>
+    <nav>
+      <ul>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#beneficios">Benefícios</a></li>
+        <li><a href="#receitas">Receitas</a></li>
+        <li><a href="#dicas">Dicas</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
     <section id="sobre">
-        <h2>Sobre Nós</h2>
-        <p>Rosário do Ivaí é conhecido como a "Capital da Uva Niágara" e nossa fazenda é uma das principais produtoras de uva de alta qualidade na região.</p>
-        <p>Nossa história começou há mais de 30 anos, quando nossos avós começaram a cultivar uvas em nossas terras. Desde então, nossa família tem se dedicado a produzir uvas de alta qualidade, respeitando o meio ambiente e valorizando a tradição.</p>
-        <img src="images/fazenda.jpg" alt="Fazenda de Uva">
+      <h2>Sobre a Uva Rosário do Ivaí</h2>
+      <p>A uva Rosário do Ivaí é uma variedade de uva originária do Brasil, conhecida por sua cor rosa e seu sabor doce e suave.</p>
+      <img src="imagens/uva-rosario.jpg" alt="Uva Rosário do Ivaí" width="300" height="200">
     </section>
-
-    <!-- Seção Produtos -->
-    <section id="produtos">
-        <h2>Nossos Produtos</h2>
-        <ul>
-            <li>
-                <img src="images/vinho.jpg" alt="Vinho Niágara">
-                <h3>Vinho Niágara</h3>
-                <p>Nosso vinho Niágara é produzido com uvas selecionadas e é conhecido por sua doçura e sabor agradável.</p>
-            </li>
-            <li>
-                <img src="images/suco.jpg" alt="Suco de Uva">
-                <h3>Suco de Uva</h3>
-                <p>Nosso suco de uva é produzido com uvas frescas e é rico em vitaminas e minerais.</p>
-            </li>
-            <li>
-                <img src="images/uvaseca.jpg" alt="Uva Seca">
-                <h3>Uva Seca</h3>
-                <p>Nossa uva seca é produzida com uvas selecionadas e é perfeita para consumo como snack saudável.</p>
-            </li>
-        </ul>
+    <section id="beneficios">
+      <h2>Benefícios da Uva Rosário do Ivaí</h2>
+      <ul>
+        <li>Rica em antioxidantes e vitaminas</li>
+        <li>Ajuda a reduzir o estresse e a ansiedade</li>
+        <li>Fortalece o sistema imunológico</li>
+      </ul>
+      <img src="imagens/beneficios.jpg" alt="Benefícios da Uva Rosário do Ivaí" width="300" height="200">
     </section>
-
-    <!-- Seção Contato -->
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Entre em contato conosco para saber mais sobre nossos produtos e serviços.</p>
-        <form>
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome"><br><br>
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email"><br><br>
-            <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem"></textarea><br><br>
-            <input type="submit" value="Enviar">
-        </form>
-        <address>
-            Rua Principal, 123<br>
-            Rosário do Ivaí, PR<br>
-            (43) 99999-9999<br>
-            <a href="mailto:contato@uvaderosario.com.br">contato@uvaderosario.com.br</a>
-        </address>
+    <section id="receitas">
+      <h2>Receitas com Uva Rosário do Ivaí</h2>
+      <ul>
+        <li>Suco de uva Rosário do Ivaí com limão</li>
+        <li>Salada de uva Rosário do Ivaí com queijo e nozes</li>
+        <li>Torta de uva Rosário do Ivaí com creme</li>
+      </ul>
+      <img src="imagens/receitas.jpg" alt="Receitas com Uva Rosário do Ivaí" width="300" height="200">
     </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2023 Uva de Rosário do Ivaí</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <section id="dicas">
+      <h2>Dicas para Consumir Uva Rosário do Ivaí</h2>
+      <ul>
+        <li>Consuma fresca ou congelada para preservar os nutrientes</li>
+        <li>Use em smoothies e sucos para adicionar sabor e nutrientes</li>
+        <li>Adicione à sua dieta regularmente para aproveitar os benefícios</li>
+      </ul>
+      <img src="imagens/dicas.jpg" alt="Dicas para Consumir Uva Rosário do Ivaí" width="300" height="200">
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2023 Produção de Uva Rosário do Ivaí</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
