--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Produção de Uva Rosário do Ivaí</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <h1>Produção de Uva Rosário do Ivaí</h1>
-    <nav>
-      <ul>
-        <li><a href="#sobre">Sobre</a></li>
-        <li><a href="#beneficios">Benefícios</a></li>
-        <li><a href="#receitas">Receitas</a></li>
-        <li><a href="#dicas">Dicas</a></li>
-      </ul>
-    </nav>
+
   </header>
   <main>
     <section id="sobre">
       <h2>Sobre a Uva Rosário do Ivaí</h2>
-      <p>A uva Rosário do Ivaí é uma variedade de uva originária do Brasil, conhecida por sua cor rosa e seu sabor doce e suave.</p>
+      <p>A uva Rosário do Ivaí é uma variedade de uva originária do Brasil, conhecida por sua cor rosa e seu sabor doce
+        e suave.</p>
       <img src="imagens/uva-rosario.jpg" alt="Uva Rosário do Ivaí" width="300" height="200">
     </section>
     <section id="beneficios">
@@ -57,4 +53,5 @@
   </footer>
   <script src="script.js"></script>
 </body>
+
 </html>
