--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <footer>
     <p>&copy; 2023 Produção de Uva Rosário do Ivaí</p>
   </footer>
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
