--- a/index.html
+++ b/index.html
@@ -1,57 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Produção de Uva Rosário do Ivaí</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green Thumb - Jardinagem e Horticultura</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <header>
-    <h1>Produção de Uva Rosário do Ivaí</h1>
-
-  </header>
-  <main>
-    <section id="sobre">
-      <h2>Sobre a Uva Rosário do Ivaí</h2>
-      <p>A uva Rosário do Ivaí é uma variedade de uva originária do Brasil, conhecida por sua cor rosa e seu sabor doce
-        e suave.</p>
-      <img src="uva_niagara_-_fruto_tipico_de_rosario.jpg" alt="foto da uva">
-    </section>
-    <section id="beneficios">
-      <h2>Benefícios da Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Rica em antioxidantes e vitaminas</li>
-        <li>Ajuda a reduzir o estresse e a ansiedade</li>
-        <li>Fortalece o sistema imunológico</li>
-      </ul>
-      <img src="Plantio-de-uva-Rosario-do-Ivai.jpg" alt="">
-    </section>
-    <section id="receitas">
-      <h2>Receitas com Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Suco de uva Rosário do Ivaí com limão</li>
-        <li>Salada de uva Rosário do Ivaí com queijo e nozes</li>
-        <li>Torta de uva Rosário do Ivaí com creme</li>
-      </ul>
-      <img src="receita3.jpg" alt="">
-    </section>
-    <section id="dicas">
-      <h2>Dicas para Consumir Uva Rosário do Ivaí</h2>
-      <ul>
-        <li>Consuma fresca ou congelada para preservar os nutrientes</li>
-        <li>Use em smoothies e sucos para adicionar sabor e nutrientes</li>
-        <li>Adicione à sua dieta regularmente para aproveitar os benefícios</li>
-      </ul>
-      <img src="colheita_da_uva.jpg" alt="">
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2023 Produção de Uva Rosário do Ivaí</p>
-  </footer>
-  <script src="main.js"></script>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#jardinagem">Jardinagem</a></li>
+                <li><a href="#horticultura">Horticultura</a></li>
+                <li><a href="#dicas">Dicas e Truques</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="inicio">
+            <h1>Bem-vindo ao Green Thumb!</h1>
+            <p>Aqui você encontrará dicas, truques e recursos para jardinagem e horticultura.</p>
+            <img src="green-thumb-logo.png" alt="Logo do Green Thumb">
+        </section>
+        <section id="jardinagem">
+            <h2>Jardinagem</h2>
+            <p>A jardinagem é uma arte que requer paciência, dedicação e amor pela natureza.</p>
+            <ul>
+                <li><a href="#">Como plantar uma horta</a></li>
+                <li><a href="#">Dicas para jardinagem orgânica</a></li>
+                <li><a href="#">Como cuidar de plantas ornamentais</a></li>
+            </ul>
+        </section>
+        <section id="horticultura">
+            <h2>Horticultura</h2>
+            <p>A horticultura é a ciência que estuda a produção de plantas para alimentação e ornamentação.</p>
+            <ul>
+                <li><a href="#">Como produzir hortaliças orgânicas</a></li>
+                <li><a href="#">Dicas para produzir frutas e legumes</a></li>
+                <li><a href="#">Como cuidar de plantas frutíferas</a></li>
+            </ul>
+        </section>
+        <section id="dicas">
+            <h2>Dicas e Truques</h2>
+            <p>Aqui você encontrará dicas e truques para jardinagem e horticultura.</p>
+            <ul>
+                <li><a href="#">Como fazer um jardim vertical</a></li>
+                <li><a href="#">Dicas para controlar pragas e doenças</a></li>
+                <li><a href="#">Como fazer um composto orgânico</a></li>
+            </ul>
+        </section>
+        <section id="contato">
+            <h2>Contato</h2>
+            <p>Fale conosco!</p>
+            <form>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome"><br><br>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email"><br><br>
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem"></textarea><br><br>
+                <input type="submit" value="Enviar">
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Green Thumb</p>
+    </footer>
 </body>
-
 </html>
