--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section id="inicio">
             <h1>Bem-vindo ao Green Thumb!</h1>
             <p>Aqui você encontrará dicas, truques e recursos para jardinagem e horticultura.</p>
-            <img src="green-thumb-logo.png" alt="Logo do Green Thumb">
+            <img src="grween.jpg" alt="logo green Thumb">
         </section>
         <section id="jardinagem">
             <h2>Jardinagem</h2>
